--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
-  max-width: 1280px;
+  width: 100%;
+  max-width: 880px;
   padding-bottom: 41px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
