--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,14 @@
 .page {
   background-color: #000;
-  padding: 45px 200px;
+  padding: 45px 0 60px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+    padding-top: 28px;
+    padding-bottom: 36px;
+  }
 }
