feat: add mobile adaptation to profile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,9 @@
   padding-bottom: 41px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding-bottom: 31.6px;
+  }
+ }
