--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -7,4 +7,15 @@
   color: #FFFFFF;
   margin: 0;
   padding: 0;
+  grid-column: 1 / -1;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__description {
+    margin-bottom: 32px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+  }
+ }
