--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -9,3 +9,13 @@
   padding: 0;
   justify-self: end;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__edit-btn {
+    position: absolute;
+    top: 36px;
+    right: -28px;
+    width: 18px;
+    height: 18px;
+  }
+ }
