--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -10,3 +10,10 @@
   padding: 0;
   margin-left: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__add-btn {
+    margin: 0;
+    width: 282px;
+  }
+ }
