--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,3 +8,14 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__name {
+    font-size: 27px;
+    line-height: 33px;
+    margin-top: 26px;
+    margin-bottom: 3px;
+    grid-column: 1 / 3;
+    text-align: center;
+  }
+ }
