--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -9,6 +9,7 @@
   background-position: center;
   padding: 0;
   margin-left: auto;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
