--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,6 @@
 .profile__avatar {
   border-radius: 50%;
   display: block;
-  margin-right: 30.25px;
+  width: 120px;
+  height: 120px;
 }
-
-@media screen and (max-width: 768px) {
-  .profile__avatar {
-    margin: 0;
-  }
- }
