--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -7,7 +7,8 @@
   background-repeat: no-repeat;
   background-position: center;
   padding: 0;
-  justify-self: end;
+  cursor: pointer;
+  margin-left: 18px;
 }
 
 @media screen and (max-width: 768px) {
