--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,11 @@
 .profile__info {
-  display: grid;
-  grid-template-columns: 1fr 42px;
-  align-items: baseline;
-  row-gap: 7px;
   position: relative;
+  display: grid;
+  gap: 8px;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__info {
+    max-width: 190px;
+  }
+ }
