--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,7 @@
   font-size: 42px;
   line-height: 48px;
   color: #FFFFFF;
+  max-width: 90%;
   margin: 0;
   padding: 0;
 }
@@ -13,9 +14,9 @@
   .profile__name {
     font-size: 27px;
     line-height: 33px;
+    width: 100%;
+    max-width: 100%;
     margin-top: 26px;
-    margin-bottom: 3px;
-    grid-column: 1 / 3;
     text-align: center;
   }
  }
