--- a/pages/index.css
+++ b/pages/index.css
@@ -7,8 +7,16 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__heading/profile__heading.css");
 @import url("../blocks/profile/__name/profile__name.css");
 @import url("../blocks/profile/__edit-btn/profile__edit-btn.css");
 @import url("../blocks/profile/__description/profile__description.css");
 @import url("../blocks/profile/__add-btn/profile__add-btn.css");
+@import url("../blocks/places/places.css");
+@import url("../blocks/place/place.css");
+@import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__info/place__info.css");
+@import url("../blocks/place/__name/place__name.css");
+@import url("../blocks/place/__like/place__like.css");
+
 
