--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,8 @@
 .page {
   background-color: #000;
   padding: 45px 0 60px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  justify-items: center;
 }
 
 @media screen and (max-width: 768px) {
