--- a/pages/index.css
+++ b/pages/index.css
@@ -18,5 +18,7 @@
 @import url("../blocks/place/__info/place__info.css");
 @import url("../blocks/place/__name/place__name.css");
 @import url("../blocks/place/__like/place__like.css");
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__copyright/footer__copyright.css");
 
 
