feat: add popup

--- a/pages/index.css
+++ b/pages/index.css
@@ -18,7 +18,13 @@
 @import url("../blocks/place/__info/place__info.css");
 @import url("../blocks/place/__name/place__name.css");
 @import url("../blocks/place/__like/place__like.css");
+@import url("../blocks/place/__like/_active/place__like_active.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
-
-
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/_visible/popup_visible.css");
+@import url("../blocks/popup/__form/popup__form.css");
+@import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__submit-btn/popup__submit-btn.css");
+@import url("../blocks/popup/__close/popup__close.css");
