--- a/blocks/place/__like/place__like.css
+++ b/blocks/place/__like/place__like.css
@@ -1,3 +1,11 @@
 .place__like {
-  
+  width: 22px;
+  height: 19px;
+  background: url("../../../images/place-like.svg");
 }
+
+.place__like:hover {
+  opacity: .5;
+}
+
+
