--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -8,14 +8,17 @@
   margin: 0;
   padding: 0;
   grid-column: 1 / -1;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
   .profile__description {
     margin-bottom: 32px;
+    max-width: 280px;
     text-align: center;
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
   }
  }
