--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,15 +8,18 @@
   max-width: 90%;
   margin: 0;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
   .profile__name {
     font-size: 27px;
     line-height: 33px;
-    width: 100%;
-    max-width: 100%;
     margin-top: 26px;
+    margin-left: 36px;
+    max-width: 190px;
     text-align: center;
   }
  }
