--- a/blocks/place/__like/place__like.css
+++ b/blocks/place/__like/place__like.css
@@ -2,6 +2,13 @@
   width: 22px;
   height: 19px;
   background: url("../../../images/place-like.svg");
+  background-position: center;
+  cursor: pointer;
+  transition: opacity .2s linear;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 .place__like:hover {
