--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -3,6 +3,11 @@
   top: -40px;
   right: -40px;
   display: block;
+  cursor: pointer;
+}
+
+.popup__close:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
