--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -10,6 +10,12 @@
   padding: 0;
   margin-left: auto;
   cursor: pointer;
+  transition: opacity .2s linear;
+  cursor: pointer;
+}
+
+.profile__add-btn:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
