--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -9,6 +9,12 @@
   padding: 0;
   cursor: pointer;
   margin-left: 18px;
+  transition: opacity .2s linear;
+  cursor: pointer;
+}
+
+.profile__edit-btn:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
