--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -12,11 +12,7 @@
 
 @media screen and (max-width: 768px) {
   .footer__copyright {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: #545454;
   }
 }
