--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,7 +2,7 @@
   border: none;
   height: 27px;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', 'Georgia', 'Tahoma', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
