--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,3 @@
 .places {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  gap: 20px 17px;
+  display: block;
 }
