--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 @import url("../blocks/profile/__description/profile__description.css");
 @import url("../blocks/profile/__add-btn/profile__add-btn.css");
 @import url("../blocks/places/places.css");
+@import url("../blocks/places/__list/places__list.css");
 @import url("../blocks/place/place.css");
 @import url("../blocks/place/__image/place__image.css");
 @import url("../blocks/place/__info/place__info.css");
