feat: add functionality to delete cards

--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 @import url("../blocks/places/__list/places__list.css");
 @import url("../blocks/place/place.css");
 @import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__delete/place__delete.css");
 @import url("../blocks/place/__info/place__info.css");
 @import url("../blocks/place/__name/place__name.css");
 @import url("../blocks/place/__like/place__like.css");
