--- a/pages/index.css
+++ b/pages/index.css
@@ -27,7 +27,11 @@
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__container/_size/popup__container_size_full.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__submit-btn/popup__submit-btn.css");
 @import url("../blocks/popup/__close/popup__close.css");
+@import url("../blocks/zoomed-picture/zoomed-picture.css");
+@import url("../blocks/zoomed-picture/__image/zoomed-picture__image.css");
+@import url("../blocks/zoomed-picture/__caption/zoomed-picture__caption.css");
