--- a/pages/index.css
+++ b/pages/index.css
@@ -30,8 +30,12 @@
 @import url("../blocks/popup/__container/_size/popup__container_size_full.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__input/_type/popup__input_type_error.css");
 @import url("../blocks/popup/__submit-btn/popup__submit-btn.css");
+@import url("../blocks/popup/__submit-btn/_disabled/popup__submit-btn_disabled.css");
 @import url("../blocks/popup/__close/popup__close.css");
+@import url("../blocks/popup/__error/popup__error.css");
+@import url("../blocks/popup/__input-container/popup__input-container.css");
 @import url("../blocks/zoomed-picture/zoomed-picture.css");
 @import url("../blocks/zoomed-picture/__image/zoomed-picture__image.css");
 @import url("../blocks/zoomed-picture/__caption/zoomed-picture__caption.css");
