--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,6 +5,7 @@
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/content/content.css");
 @import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/__avatar-container/profile__avatar-container.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__heading/profile__heading.css");
@@ -19,6 +20,8 @@
 @import url("../blocks/place/__delete/place__delete.css");
 @import url("../blocks/place/__info/place__info.css");
 @import url("../blocks/place/__name/place__name.css");
+@import url("../blocks/place/__likes/place__likes.css");
+@import url("../blocks/place/__likes-counter/place__likes-counter.css");
 @import url("../blocks/place/__like/place__like.css");
 @import url("../blocks/place/__like/_active/place__like_active.css");
 @import url("../blocks/footer/footer.css");
