--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 .header__logo{display:block}@media screen and (max-width:1024px){.header__logo{margin-left:27px}}@media screen and (max-width:768px){.header__logo{height:24.4px;width:103.74px}}
 .content{box-sizing:border-box;max-width:880px;width:100%}@media screen and (max-width:1024px){.content{padding:0 19px}}
 .profile{align-items:center;display:grid;grid-template-columns:150px 1fr 150px;padding:40px 0 51px}@media screen and (max-width:768px){.profile{grid-template-columns:1fr;justify-items:center;padding-bottom:36px}}
+.profile__avatar-container{border-radius:50%;display:block;height:120px;position:relative;width:120px}.profile__avatar-container:hover:after{background:url(a086f758840ae814ecde.svg) rgba(0,0,0,.8) no-repeat 50%;bottom:0;color:#fff;content:"";cursor:pointer;display:block;left:0;position:absolute;right:0;top:0}
 .profile__avatar{border-radius:50%;display:block;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
 .profile__info{display:grid;gap:8px;justify-items:start;position:relative;width:100%}@media screen and (max-width:768px){.profile__info{justify-items:center}}
 .profile__heading{align-items:baseline;display:flex}
@@ -19,23 +20,25 @@
 .place__delete{cursor:pointer;position:absolute;right:20px;top:20px;transition:opacity .2s linear}.place__delete:hover{opacity:.6}
 .place__info{align-items:center;background:#fff;display:grid;grid-template-columns:1fr 50px;padding:25px 20px 25px 21px}
 .place__name{color:#000;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
+.place__likes{align-items:center;display:flex;flex-direction:column;margin-left:auto;width:22px}
+.place__likes-counter{color:#000;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:3px 0 0;padding:0;text-align:center}
 .place__like{background:url(7913ddfd147a48616b09.svg);background-position:50%;border:none;cursor:pointer;height:19px;justify-self:end;margin:0;padding:0;transition:opacity .2s linear;width:22px}.place__like:hover{opacity:.5}
 .place__like_active{background:url(fe17a515669479b1e649.svg)}
 .footer{box-sizing:border-box;margin-top:auto;max-width:880px;padding-top:67px;width:100%}@media screen and (max-width:768px){.footer{padding:48px 19px 0}}
 .footer__copyright{color:#545454;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;padding:0;text-align:left}@media screen and (max-width:768px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.9);bottom:0;display:flex;justify-content:center;left:0;opacity:0;padding:19px;position:fixed;right:0;top:0;transition:visibility .2s linear,opacity .2s linear;visibility:hidden}
 .popup_opened{opacity:1;visibility:visible}
-.popup__form{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-direction:column;justify-content:space-between;min-height:330px;padding:34px 36px 37px;width:100%}@media screen and (max-width:450px){.popup__form{min-height:322px;padding:25px 22px}}
+.popup__form{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-direction:column;justify-content:space-between;padding:34px 36px 37px;width:100%}@media screen and (max-width:450px){.popup__form{padding:25px 22px}}
 .popup__container{max-width:430px;position:relative;width:100%}
 .popup__container_size_full{display:grid;grid-template-columns:100%;grid-template-rows:100%;max-height:75vh;max-width:75vw}
-.popup__title{color:#000;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0 0 17px;padding:0}@media screen and (max-width:450px){.popup__title{font-size:18px;line-height:22px;margin-bottom:46px}}
+.popup__title{color:#000;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0;padding:0}@media screen and (max-width:450px){.popup__title{font-size:18px;line-height:22px}}
 .popup__input{border:none;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:14px;font-style:normal;font-weight:400;height:27px;line-height:17px;padding:0;text-align:left;width:100%}.popup__input:focus-visible{outline:none}
 .popup__input_type_error{border-bottom:1px solid red}
-.popup__submit-btn{background:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin-top:20px;padding:0;text-align:center;transition:opacity .2s linear}.popup__submit-btn:hover{opacity:.8}@media screen and (max-width:450px){.popup__submit-btn{font-size:14px;height:46px;line-height:17px}}
+.popup__submit-btn{background:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin-top:48px;padding:0;text-align:center;transition:opacity .2s linear}.popup__submit-btn:hover{opacity:.8}@media screen and (max-width:450px){.popup__submit-btn{font-size:14px;height:46px;line-height:17px}}
 .popup__submit-btn_disabled{background-color:transparent;border:1px solid #000;color:#000;cursor:auto;opacity:.2}.popup__submit-btn_disabled:hover{opacity:.2}
 .popup__close{background-color:transparent;background-image:url(2ceb783afbab75916ddc.svg);border:none;cursor:pointer;display:block;height:32px;margin:0;padding:0;position:absolute;right:-40px;top:-40px;width:32px}.popup__close:hover{opacity:.6}@media screen and (max-width:768px){.popup__close{background-size:20px 20px;height:20px;right:0;top:-36px;width:20px}}
 .popup__error{color:red;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:12px;font-style:normal;font-weight:400;left:0;line-height:15px;position:absolute;top:calc(100% + 5px);z-index:1}
-.popup__input-container{margin:0;padding:0;position:relative}
+.popup__input-container{margin:0 0 30px;padding:0;position:relative}.popup__input-container:first-of-type{margin-top:45px}.popup__input-container:last-of-type{margin-bottom:0}
 .zoomed-picture{margin:0;padding:0}
 .zoomed-picture__image{display:block;height:100%;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:100%}
 .zoomed-picture__caption{color:#fff;font-family:Inter,Arial,Georgia,Tahoma,sans-serif;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin-top:10px}
